fix namefichier + view modules

--- a/projet/Views/Shared/_LayoutAdmin.cshtml
+++ b/projet/Views/Shared/_LayoutAdmin.cshtml
@@ -95,7 +95,7 @@
                             <span>Modules registration</span>
                         </a>
                         <ul class="sub">
-                            <li> <a asp-area="" asp-controller="Modules1" asp-action="ImportExcelAddEns">Import Excel file</a></li>
+                            <li> <a asp-area="" asp-controller="Modules1" asp-action="ImportExcelAddModules">Import Excel file</a></li>
                             <li><a asp-area="" asp-controller="Modules1" asp-action="CreateModule">Add Modules</a></li>
                             <li><a asp-area="" asp-controller="Modules1" asp-action="TudoEns">Modify / Delete a Module</a></li>
                         </ul>
