change style navbar enseignant

--- a/projet/Views/Shared/_LayoutEnseignant.cshtml
+++ b/projet/Views/Shared/_LayoutEnseignant.cshtml
@@ -33,10 +33,11 @@
     </style>
 </head>
 <body id="page-top">
+
     <!-- Page Wrapper -->
     <div id="wrapper">
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-info sidebar sidebar-dark accordion" id="accordionSidebar">
+        <ul class="navbar-nav bg-gradient-dark sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
@@ -92,7 +93,7 @@
                 <a class="nav-link" href="@Url.Action("Logout", "Enseignants")">
                     <i class="fas fa-fw fa-window-close"></i>
                     <span>Déconnection</span>
-                    
+
                 </a>
             </li>
 
@@ -113,7 +114,7 @@
             <div id="content">
 
                 <!-- Topbar -->
-                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+                <nav class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top shadow">
 
                 </nav>
                 <!-- End of Topbar -->
